@@ -19,3 +19,4 @@ depth: 1
  * Allow button labels to wrap onto two lines in dropdown buttons (Coen van der Kamp)
  * Allow both horizontal and vertical manual resizing of TextFields (Anisha Singh)
  * Move DateField, DateTimeField, TimeField comment buttons to be right next to the fields (Theresa Okoro)
+ * Support text resizing in workflow steps cards (Ivy Jeptoo)
